fixed spacing

--- a/main.css
+++ b/main.css
@@ -50,7 +50,12 @@ body {
 }
 
 .figure {
-  text-align: center;
+  text-align: left;
   all: unset;
   display: block;
+}
+
+.caption {
+  padding-top: 0.7vw;
+  padding-bottom: 0.7vw;
 }
